--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-pager-view": "6.1.2",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
