--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-pager-view": "6.1.2",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-linear-gradient": "~12.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
