--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@react-native-community/viewpager": "^5.0.11",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-maps": "^1.7.1",
     "react-native-pager-view": "6.1.2",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-linear-gradient": "~12.1.2"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
