--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
@@ -17,7 +19,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.1.2",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
