--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/auth": "^17.5.0",
+    "@react-native-firebase/firestore": "^17.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
@@ -17,6 +20,7 @@
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
