--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.1.2",
+    "react-native-root-toast": "^3.4.1",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
